2011-07-18  Jeff Johnston  <jjohnstn@redhat.com>

	* icons/system_view.gif: New icon.
	* src/org/eclipse/linuxtools/profiling/launch/remote/RemoteTab.java (refreshViewer): Use list of hosts.
	(getImage): Use RSE system icon instead of TCF icon.
	(performApply): Work with RSE hosts.
	(initializeFrom): Ditto.
	(createControl): Ditto.
	(RemoteSystemLabelProvider): New class.
	(RemoteLabelProvider): Removed.
	* src/org/eclipse/linuxtools/profiling/launch/remote/RemoteConnection.java (initialize): Rewritten to assume an RSE
	host has already been chosen and no TCF interaction is required.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/RemoteMessages.java: Remove TCF-only messages.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/remoteMessages.properties: Ditto.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/RemoteLaunchConstants.java (ATTR_REMOTE_PEERID): Removed.

2011-06-29  Jeff Johnston  <jjohnstn@redhat.com>

	Part of rewrite of remote Valgrind to use RSE/TCF.
	* META-INF/MANIFEST.MF: Add RSE dependencies.
	* src/org/eclipse/linuxtools/profiling/launch/remote/ProfileRemoteLaunchConfigurationTabGroup.java: Moved from internal
	package.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/RemoteCommandShellOperation.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/RemoteLaunchConstants.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/RemoteMessages.java: New file.
	* src/org/eclipse/linuxtools/internal/profiling/launch/remote/remoteMessages.properties: New file.
	* src/org/eclipse/linuxtools/profiling/launch/remote/RemoteTab.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/remote/RemoteConnectionException.java: New file.
	* src/org/eclipse/linuxtools/profiling/launch/remote/RemoteConnection.java: New file.

2010-08-11  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Removed unnecessary dependency.
