@@ -10,12 +10,16 @@
  *******************************************************************************/ 
 package org.eclipse.linuxtools.profiling.launch.remote;
 
-public class RemoteConnectionException extends Exception {
+import org.eclipse.core.runtime.CoreException;
+import org.eclipse.core.runtime.Status;
+import org.eclipse.linuxtools.internal.profiling.launch.remote.ProfileRemoteLaunchPlugin;
+
+public class RemoteConnectionException extends CoreException {
 	
 	private static final long serialVersionUID = 1L;
 
-	public RemoteConnectionException(String message) {
-		super(message);
+	public RemoteConnectionException(String message, Throwable t) {
+		super(new Status(Status.ERROR, ProfileRemoteLaunchPlugin.PLUGIN_ID, message, t));
 	}
 
 }
